<resources>
    <string name="app_name">Kennel Manager</string>

    <!-- SPLASH SCREEN -->
    <string name="splash_title">ZEN PETS</string>

    <!-- THE NOTIFICATION CHANNELS -->
    <string name="default_notification_channel_id">KENNEL_DEFAULT_CHANNEL</string>
    <string name="default_notification_channel_name">KENNEL_DEFAULT_CHANNEL</string>
    <string name="default_notification_channel_desc">KENNEL_DEFAULT_CHANNEL</string>

    <!-- LANDING ACTIVITY -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- COMMON STRINGS -->
    <string name="loading_message">Loading…</string>

    <!-- IMAGE PICKER SHEET STRINGS -->
    <string name="image_picker_sheet_title">ADD AN IMAGE</string>
    <string name="image_picker_sheet_gallery">Choose from photo gallery</string>
    <string name="image_picker_sheet_camera">Take a photo</string>

    <!-- LOGIN SCREEN -->
    <string name="login_app_title">Zen Pets</string>
    <string name="login_app_sub_title">for kennels</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_create_account">Create Account</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_listed_message">If you have been pre-listed, click the link below to claim your profile</string>
    <string name="login_listed">CLAIM PROFILE</string>

    <string name="login_unregistered_title">"Email Not Found"</string>
    <string name="login_unregistered_message">This email does not exist in our records. If you haven\'t signed up, please use the \"Create Account\" button to do so now.</string>
    <string name="login_unregistered_create">Create Account</string>
    <string name="login_unregistered_cancel">Cancel</string>

    <string name="login_auth_failed_title">Authentication Failed</string>
    <string name="login_auth_failed_message">Invalid Password. If you forgotten your password, click the \"Forgot Password\" button to reset your Password. We will send you an email on your registered Email Address to reset it.</string>
    <string name="login_auth_failed_forgot_password">Forgot Password</string>
    <string name="login_auth_failed_cancel">Cancel</string>

    <!-- SIGN UP / CREATE ACCOUNT TEXT -->
    <string name="sign_up_title">CREATE AN ACCOUNT</string>
    <string name="sign_up_sub_title">Start using Zen Pets Kennel Manager in a few steps</string>
    <string name="sign_up_kennel_name">(*) Kennel Name</string>
    <string name="sign_up_kennel_name_error">Please provide the kennel name</string>
    <string name="sign_up_contact_name">(*) Contact person\'s name</string>
    <string name="sign_up_contact_name_error">Provide the contact person\'s name</string>
    <string name="sign_up_contact_phone">(*) Contact person\'s phone</string>
    <string name="sign_up_contact_phone_error">Provide the contact person\'s phone</string>
    <string name="sign_up_email_address_hint">(*) Email address</string>
    <string name="sign_up_email_address_error">Provide the email address</string>
    <string name="sign_up_email_address_incorrect">Enter a valid email address</string>
    <string name="sign_up_password_hint">(*) Password (at least 8 characters)</string>
    <string name="sign_up_password_error">Choose your password</string>
    <string name="sign_up_confirm_password_hint">(*) Confirm the Password</string>
    <string name="sign_up_confirm_password_error">Confirm your Password</string>
    <string name="sign_up_length_error">Password has to be at least 8 characters</string>
    <string name="sign_up_mismatch_error">Your passwords do not match</string>
    <string name="sign_up_mailing_address_hint">(*) Kennel\'s Postal Address</string>
    <string name="sign_up_mailing_address_error">Please provide the Kennel\'s postal address</string>
    <string name="sign_up_pin_code_hint">(*) Pin Code</string>
    <string name="sign_up_pin_code_error">Please provide the pin code</string>
    <string name="sign_up_phone_number_1_hint">(*) Kennel Phone Number #1</string>
    <string name="sign_up_phone_number_1_error">Provide the Kennel\'s phone number</string>
    <string name="sign_up_phone_number_2_hint">Kennel Phone Number #2</string>
    <string name="sign_up_pet_capacity_hint">(*) Total Pets You Can Accommodate</string>
    <string name="sign_up_pet_capacity_error">How many Pets can you accommodate?</string>
    <string name="sign_up_select_country">Select your Country</string>
    <string name="sign_up_select_state">Select your State</string>
    <string name="sign_up_select_city">Select your City</string>
    <string name="sign_up_location_error">Please mark the Kennel\'s location on the Map</string>
    <string name="sign_up_cover_photo">Tap the image to select the Kennel\'s Cover Photo/ Logo</string>
    <string name="sign_up_cover_photo_error">Please select the Kennel\'s Cover Photo / Logo</string>

    <!-- LEGAL STRINGS -->
    <string name="sign_up_full_terms">By continuing, I agree to the Seller Agreement and Privacy Policy</string>
    <string name="terms_part_1">By continuing, I agree to the&#160;</string>
    <string name="terms_part_2">Seller Agreement</string>
    <string name="terms_part_3">&#160;and the&#160;</string>
    <string name="terms_part_4">Privacy Policy</string>

    <!-- KENNEL CREATOR -->
    <string name="kennel_creator_limit_exceed_message">Kennel Owners on Zen Pets are allotted 2 Kennel Listings. To add additional Kennels over and above the permitted 2, you will be charged Rs. 1,000 (per additional listing).
        \n\nIf you wish to add an additional Kennel, you will be directed to the payment gateway. On successful payment, the Kennel will be published on the Zen Pets platform. The new Kennel, after payment confirmation, will be valid for 1 year from the date of successful payment</string>
    <string name="kennel_creator_limit_exceed_payment_message">You will be redirected to the Payment Gateway to process the payment for the additional Kennel listing. As a reminder, the cost of adding additional Kennels is Rs. 1,000 (per additional listing).
        \n\nOn successful payment, the Kennel will be published on the Zen Pets platform. The new Kennel, after payment confirmation, will be valid for 1 year from the date of successful payment.
    \n\nTo continue, press the \"PAY NOW\" button. Else, press the \"CANCEL\" button.</string>

    <!-- KENNEL LIST ITEM STRINGS -->
    <string name="kennel_list_kennel_name_label">KENNEL NAME</string>
    <string name="kennel_list_kennel_address_label">KENNEL ADDRESS</string>
    <string name="kennel_list_kennel_address_placeholder">%1$s, %2$s - %3$s</string>
    <string name="kennel_list_kennel_capacity_label">PET CAPACITY</string>
    <string name="kennel_list_kennel_capacity_zero">0 Pets</string>
    <string name="kennel_list_kennel_capacity_placeholder">Kennel has a capacity to hold %1$s Pets</string>
    <string name="kennel_list_kennel_validity_label">KENNEL VALIDITY</string>
    <string name="kennel_list_kennel_validity_label_placeholder">Valid From: <b>%1$s</b> to <b>%2$s</b></string>
    <string name="kennel_list_votes_open">(</string>
    <string name="kennel_list_votes_close">)</string>
    <string name="kennel_list_votes_placeholder">%1$s %2$s%3$s%4$s</string>
    <string name="kennel_list_unpaid_alert_title">Unpaid Kennel Listing</string>
    <string name="kennel_list_unpaid_alert_message">This is an additional Kennel listing over an above the allotted 2 Kennel Listings.
        \n\nTo list the Kennel and make it visible to Pet Parents, press the \"PROCESS PAYMENT\". Else, press the \"CANCEL\" button.</string>

    <!-- KENNEL FEEDBACK LIST -->
    <string name="reviews_list_empty">There are no reviews / feedback for you, yet.
        \n\nThis section will populate as soon as Zen Pets Users start adding reviews for your services…</string>

    <!-- KENNEL REVIEW STRINGS -->
    <string name="review_subset_reason">Visit Reason</string>
    <string name="review_subset_experience">Visit Experience</string>
    <string name="review_subset_user_name">User Name</string>
    <string name="review_subset_time_stamp">2 Months</string>
    <string name="review_reply_from_label"><b>Reply from Siddharth Lele</b> on 6/6/2018</string>
    <string name="review_reply_from_title">Replied on </string>

    <!-- KENNEL DETAILS -->
    <string name="kennel_details_name">KENNEL NAME</string>
    <string name="kennel_details_address">KENNEL ADDRESS</string>
    <string name="kennel_details_address_placeholder">%1$s, %2$s - %3$s</string>
    <string name="kennel_details_all_reviews_placeholder">SEE ALL REVIEWS (%1$s)</string>

    <!-- KENNEL ENQUIRY ITEM STRINGS -->
    <string name="ke_unread_message_count_placeholder">%1$s</string>

    <!-- ENQUIRY DETAILS -->
    <string name="enquiry_details_new_message_hint">Type a message</string>
    <string name="ed_incoming_message">This is an incoming message…</string>
    <string name="ed_user_name">User\'s Name</string>
    <string name="ed_outgoing_message">This is an outgoing message…</string>
    <string name="ed_trainer_name">Trainer\'s Name</string>
    <string name="ed_message_time_stamp">11:15 PM</string>

    <!-- REPORTS STRINGS -->
    <string name="rb_total_views">VIEWS</string>
    <string name="rb_total_views_placeholder">%1$s Views</string>
    <string name="report_duration_summary">30 days summary…</string>
    <string name="report_duration_summary_placeholder">%1$s days summary...</string>

    <!-- INVENTORY ITEM STRINGS -->
    <string name="inv_item_available_label">Inventory Item is <b>available</b> for bookings</string>
    <string name="inv_item_available">The inventory item is available for bookings</string>
    <string name="inv_item_unavailable_label">Inventory Item is <b>unavailable</b> for bookings</string>
    <string name="inv_item_unavailable">This inventory item is marked <b>unavailable</b> for bookings</string>

    <!-- KENNEL ADD-ONS -->
    <string name="add_on_creator_label">Create a new Add-on for Pet Parents to choose along with your boarding services</string>
    <string name="add_on_creator_name_label">Provide a name for the new Add-on service. This will be displayed to Pet Parents</string>
    <string name="add_on_creator_name_hint">Enter the Add-on name</string>
    <string name="add_on_creator_cost_label">Provide the cost of this Add-on</string>
    <string name="add_on_creator_cost_hint">Enter the cost of the Add-on</string>
    <string name="add_on_creator_desc_label">Describe what is included with the Add-on. For example:
        \n1. Bath and Shampoo (Rs.200/Bath)
        \n2. Pick up (Rs.10/km - based on actual distance)
        \n3. In-house Tick Treatment (Rs.100/Treatment)</string>
    <string name="add_on_creator_desc_hint">Describe what the add-on includes and it\'s cost</string>
</resources>