<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/zen_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAddonLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/add_on_creator_label"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/txtAddonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|center"
        android:text="@string/add_on_creator_name_label"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintEnd_toEndOf="@+id/txtAddonLabel"
        app:layout_constraintStart_toStartOf="@+id/txtAddonLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtAddonLabel" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputAddonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="@+id/txtAddonName"
        app:layout_constraintStart_toStartOf="@+id/txtAddonName"
        app:layout_constraintTop_toBottomOf="@+id/txtAddonName">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtAddonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_on_creator_name_hint"
            android:inputType="textCapWords"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/tertiary_text"
            android:textSize="14sp"
            app:fontFamily="@font/roboto_condensed_regular" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtPriceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/add_on_creator_cost_label"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintEnd_toEndOf="@+id/inputAddonName"
        app:layout_constraintStart_toStartOf="@+id/inputAddonName"
        app:layout_constraintTop_toBottomOf="@+id/inputAddonName" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="@+id/txtPriceLabel"
        app:layout_constraintStart_toStartOf="@+id/txtPriceLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_on_creator_cost_hint"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/tertiary_text"
            android:textSize="14sp"
            app:fontFamily="@font/roboto_condensed_regular" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtDescriptionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/add_on_creator_desc_label"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_condensed_regular"
        app:layout_constraintEnd_toEndOf="@+id/inputCost"
        app:layout_constraintStart_toStartOf="@+id/inputCost"
        app:layout_constraintTop_toBottomOf="@+id/inputCost" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="@+id/txtDescriptionLabel"
        app:layout_constraintStart_toStartOf="@+id/txtDescriptionLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/add_on_creator_desc_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="5"
            android:maxLines="8"
            android:minLines="5"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/tertiary_text"
            android:textSize="14sp"
            app:fontFamily="@font/roboto_condensed_regular" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>