<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="end|center"
        android:paddingBottom="5dp"
        android:paddingEnd="11dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingStart="11dp"
        android:paddingTop="5dp"
        android:text="@string/login_create_account"
        android:textColor="@android:color/primary_text_light"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewDivider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="start|center"
        android:paddingBottom="5dp"
        android:paddingEnd="11dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingStart="11dp"
        android:paddingTop="5dp"
        android:text="@string/login_forgot_password"
        android:textColor="@android:color/primary_text_light"
        android:textColorLink="@android:color/holo_orange_dark"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintBottom_toBottomOf="@+id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewDivider"
        app:layout_constraintTop_toTopOf="@+id/viewDivider" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0.75dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/fixed_divider_horizontal_bright"
        app:layout_constraintBottom_toBottomOf="@+id/txtCreateAccount"
        app:layout_constraintEnd_toStartOf="@+id/txtForgotPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtCreateAccount"
        app:layout_constraintTop_toTopOf="@+id/txtCreateAccount" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/login_sign_in"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_light"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/tertiary_text_light"
            android:textSize="16sp">

            <requestFocus />
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imgvwAppLogo"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zen_pets_graphic" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/login_app_title"
        android:textColor="@color/primary_text"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwAppLogo" />

    <TextView
        android:id="@+id/txtAppIdentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_app_sub_title"
        android:textColor="@color/secondary_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName" />
</android.support.constraint.ConstraintLayout>